code/intelligent-routing-with-istio/istio/step-2-update-and-add-routing-for-all-components.yaml
# voting-app-virtualservice-1.0.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: voting-app
spec:
  hosts:
  - "*"
  gateways:
  - voting-app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: voting-app.voting.svc.cluster.local
        subset: v1-0
        port:
          number: 8080
---
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
spec:
  mtls:
    mode: STRICT
---
# voting-app-destinationrule-1.0.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: voting-app
spec:
  host: voting-app.voting.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1-0
    labels:
      app: voting-app
      version: "1.0"
---
# voting-analytics-destinationrule-1.0-and-1.1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: voting-analytics
spec:
  host: voting-analytics.voting.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1-0
    labels:
      app: voting-analytics
      version: "1.0"
  - name: v1-1
    labels:
      app: voting-analytics
      version: "1.1"
---
# voting-analytics-virtualservice-1.1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: voting-analytics
spec:
  hosts:
  - voting-analytics.voting.svc.cluster.local
  http:
  - match:
    - sourceLabels:
        app: voting-app
        version: "1.0"
    route:
    - destination:
        host: voting-analytics.voting.svc.cluster.local
        subset: v1-1
        port:
          number: 8080
---
# voting-storage-destinationrule-1.0.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: voting-storage
spec:
  host: voting-storage.voting.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1-0
    labels:
      app: voting-storage
      version: "1.0"
---
# voting-storage-virtualservice-1.0.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: voting-storage
spec:
  hosts:
  - voting-storage.voting.svc.cluster.local
  tcp:
  - match:
    - sourceLabels:
        app: voting-app
        version: "1.0"
    route:
    - destination:
        host: voting-storage.voting.svc.cluster.local
        subset: v1-0
        port:
          number: 6379
  - match:
    - sourceLabels:
        app: voting-analytics
        version: "1.1"
    route:
    - destination:
        host: voting-storage.voting.svc.cluster.local
        subset: v1-0
        port:
          number: 6379
